fix tweet overflow on screens

--- a/public/styles/responsive.css
+++ b/public/styles/responsive.css
@@ -33,7 +33,8 @@ div.profile-container {
 }
 
 main {
-  margin: 10%
+  margin: 10%;
+  max-width: 50vw;
 }
 
 
